// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBoundary.Classic duplicate focus keys within same boundary throws 1`] = `
{
  "error": [SetError: The value focuser does not exist],
  "errorInfo": {
    "componentStack": "
    at FocuserWithTabRegistry
    at FocuserWithForwardRef
    at div
    at TabBoundaryWithTabRegistry
    at TabBoundaryWithForwardRef
    at ErrorBoundary",
  },
}
`;

exports[`TabBoundary.Hooks duplicate focus keys within same boundary throws 1`] = `
{
  "error": [SetError: The value: focuser already exists],
  "errorInfo": {
    "componentStack": "
    at Focuser
    at div
    at ErrorBoundary",
  },
}
`;

exports[`TabBoundary.Hotkeys duplicate focus keys within same boundary throws 1`] = `
{
  "error": [SetError: The value: focuser already exists],
  "errorInfo": {
    "componentStack": "
    at Focuser
    at div
    at ErrorBoundary",
  },
}
`;
